Fixed the position of context menus on window resize; they were not responsive. Small changes on css structure.

--- a/css/custompages-base.css
+++ b/css/custompages-base.css
@@ -2365,7 +2365,7 @@ aside code,
   left: 0;
   right: 0;
   bottom: 0;
-  backdrop-filter: blur(0.2rem);
+  background-color: var(--white);
   opacity: 0;
   z-index: -1;
   visibility: hidden;
@@ -2374,27 +2374,6 @@ aside code,
 }
 
 .show-modal .modal::before {
-  opacity: 1;
-  z-index: 1000;
-  visibility: visible;
-}
-
-.modal::after {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--secondary-ultra-light);
-  opacity: 0;
-  z-index: -1;
-  visibility: hidden;
-  -webkit-transition: opacity 0.3s ease;
-  transition: opacity 0.3s ease;
-}
-
-.show-modal .modal::after {
   opacity: 0.8;
   z-index: 1001;
   visibility: visible;
